# Python

./: .gitignore  Cargo.toml
src/maths/: abs.rs  abs_max.rs  abs_min.rs  area.rs  area_under_curve.rs  average_mean.rs  average_median.rs  collatz_sequence.rs  mod.rs
