[package]
name = "algorithms"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "area_under_curve"
path = "src/maths/area_under_curve.rs"